# i8080-emulator

./: .gitignore  CMakeLists.txt  README.md
src/: State8080.c  State8080.h  arithmetic_group.c  branch_group.c  datatransfer_group.c  main.c
src/cpu/: State8080.c  arithmetic_group.c  datatransfer_group.c  logical_group.c  machine_control_group.c
